start work on account

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/peoples"
         android:icon="@drawable/peoples"
-        android:title="@string/peoples"/>
+        android:title="@string/employees"/>
 
     <item
         android:id="@+id/tasks"
