--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,8 +6,13 @@
 
     <color name="charcoal_alpha">#96262a29</color>
     <color name="dark_mint_green">#1ac270</color>
+    <color name="dark_mint_green_75">#961ac270</color>
 
     <color name="gunmetal">#515554</color>
     <color name="charcoal">#262a29</color>
     <color name="white">#fff</color>
+    <color name="black">#000000</color>
+    <color name="grey_alpha_75">#c0919191</color>
+    <color name="dark_seafoam">#1bbf81</color>
+    <color name="seaweed">#1fe76e</color>
 </resources>
