--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,22 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+    <style name="TitleTS">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="SubtitleTS">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/grey_alpha_75</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="DividerStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">@color/black</item>
+        <item name="android:alpha">0.1</item>
+    </style>
 </resources>
