about app fragment ready

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="grey_alpha_75">#c0919191</color>
     <color name="dark_seafoam">#1bbf81</color>
     <color name="seaweed">#1fe76e</color>
+    <color name="blue_link">#2b72d7</color>
 </resources>
