--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,4 +30,10 @@
         <item name="android:background">@color/black</item>
         <item name="android:alpha">0.1</item>
     </style>
+
+    <style name="LinkTS">
+        <item name="android:textColor">@color/blue_link</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">italic|bold</item>
+    </style>
 </resources>
