Tasks container ready

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/tasks"
         android:icon="@drawable/tasks"
-        android:title="@string/tasks"/>
+        android:title="@string/my_tasks"/>
 
     <item
         android:id="@+id/map"
