--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
     <color name="dark_seafoam">#1bbf81</color>
     <color name="seaweed">#1fe76e</color>
     <color name="blue_link">#2b72d7</color>
+    <color name="pale_grey">#f1f1f3</color>
+    <color name="green_teal">#0ab861</color>
 </resources>
