--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="pad_4">4dp</dimen>
+    <dimen name="pad_6">6dp</dimen>
+    <dimen name="pad_8">8dp</dimen>
+    <dimen name="pad_10">10dp</dimen>
     <dimen name="pad_12">12dp</dimen>
+    <dimen name="pad_20">20dp</dimen>
     <dimen name="pad_24">24dp</dimen>
     <dimen name="pad_30">30dp</dimen>
+    <dimen name="pad_32">32dp</dimen>
     <dimen name="pad_48">48dp</dimen>
+    <dimen name="pad_55">55dp</dimen>
+    <dimen name="pad_80">80dp</dimen>
 </resources>
