--- a/app/src/main/res/layout/fragment_road_builder.xml
+++ b/app/src/main/res/layout/fragment_road_builder.xml
@@ -2,11 +2,36 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true">
+
+    <LinearLayout
+        android:id="@+id/selected_task_layout"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:background="@drawable/green_gradient"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/task_name_tv"
+            style="@style/MediumWhiteCenter18"
+            android:padding="10dp"
+            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:id="@+id/arrow_iv"
+            android:src="@drawable/arrow_down_white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
     <fragment
         android:name="com.google.android.gms.maps.MapFragment"
         android:id="@+id/map_fragment"
+        android:layout_below="@+id/selected_task_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
@@ -20,6 +45,34 @@
         android:padding="12dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/go_tv"
+        style="@style/RoundDarkButton"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:text="@string/start"
+        android:visibility="gone"
+        android:paddingStart="@dimen/pad_20"
+        android:paddingEnd="@dimen/pad_18"
+        android:background="@drawable/location_background"
+        android:layout_marginStart="@dimen/pad_20"
+        android:layout_marginBottom="@dimen/pad_28"
+        android:drawablePadding="@dimen/pad_4"
+        android:paddingTop="@dimen/pad_10"
+        android:paddingBottom="@dimen/pad_10"
+        android:drawableStart="@drawable/google_map"
+        android:drawableEnd="@drawable/arrow_right_white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <FrameLayout
+        android:id="@+id/task_picker_frame"
+        android:background="@color/black_alpha_70"
+        android:visibility="gone"
+        android:layout_below="@+id/selected_task_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <ProgressBar
         android:id="@+id/progress_bar"
