--- a/app/src/main/res/layout/item_snippet.xml
+++ b/app/src/main/res/layout/item_snippet.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/customer_wish_tv"
-        android:text="@string/customer_wish"
+        android:text="@string/customer_comment"
         style="@style/TitleTS"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
